# vshare

./: .gitignore  LICENSE  pyproject.toml
vshare/bencode/: __init__.py  common.py  decode.py  encode.py  exceptions.py
vshare/bencode/tests/: test_bencode.py
